@@ -20,8 +20,8 @@ collective.recaptcha = 1.1.5
 collective.recipe.supervisor = 0.19
 collective.recipe.template = 1.11
 eea.faceted.vocabularies = 5.3
-eea.facetednavigation = 8.7+zest.1
-eea.jquery = 8.6
+eea.facetednavigation = 8.8
+eea.jquery = 8.7
 Genshi = 0.6
 gocept.munin = 0.1
 gocept.recipe.env = 1.0
